--- a/scss/components/_hero-section.scss
+++ b/scss/components/_hero-section.scss
@@ -7,10 +7,10 @@
     background-size: cover;
     background-repeat: no-repeat;
 
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero\ img@1x_sm.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img@1x_sm.jpg);
 
     @media screen and (min-width: 768px) {
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero\ img@1x_lg.jpg);
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img@2x_lg.jpg);
     }
 
      @media screen and (min-width: 1200px) {
