--- a/scss/components/_hero-section.scss
+++ b/scss/components/_hero-section.scss
@@ -1,29 +1,43 @@
 .overlay {
-    // height: 400px;
-    // max-width: 480px;
     margin-right: auto;
     margin-left: auto;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
-
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img@1x_sm.jpg);
-
-    @media screen and (min-width: 768px) {
-        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero-img@2x_lg.jpg);
-    }
-
-     @media screen and (min-width: 1200px) {
-            background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero.jpg);
+    
+        background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-@1x_sm.jpg);
+    
+        @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi),(min-resolution: 2dppx) {
+            background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-@2x_sm.jpg);
         }
+    
+        @media screen and (min-width: 768px) {
+            background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-@1x_lg.jpg);
+    
+            @media (min-device-pixel-ratio: 2),(min-resolution: 192dpi),(min-resolution: 2dppx) {
+                background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-@2x_lg.jpg);
+            }
+        }
+    
+        @media screen and (min-width: 1200px) {
+            background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero.jpg);
+    
+            @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero@2x_bg.jpg);
+            }
+    
+        }
+    
 }
 
 /*Hero*/
 .hero.section {
-    @media screen and (min-width: 1200px) {
+@media screen and (min-width: 1200px) {
         padding-top: 200px;
         padding-bottom: 200px;
+
         }
+    
 }
 
 .hero__title {
