--- a/scss/components/_social-links.scss
+++ b/scss/components/_social-links.scss
@@ -46,11 +46,11 @@ social-links team list
     @media screen and (max-width:767px) {
             align-items: center;
             margin-bottom: 60px;
-    
         }
     display: flex;
     flex-direction: column;
     justify-content: center;
+        margin-bottom: 100px;
 
 }
 .socials-list__link--accede {
