--- a/css/main.css
+++ b/css/main.css
@@ -213,6 +213,12 @@ body {
     margin-left: 40px;
   }
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .email-link,
+.phone-link {
+    display: block;
+  }
+}
 
 .mail-link:focus,
 .mail-link:hover,
@@ -254,23 +260,18 @@ body {
 }
 
 .footer-container {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  display: block;
+  text-align: center;
 }
 @media screen and (min-width: 768px) {
   .footer-container {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    margin-left: 30px;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -298,12 +299,6 @@ body {
             align-items: center;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .footer-address {
-    margin-left: 90px;
-    margin-bottom: 20px;
-  }
-}
 @media screen and (min-width: 1200px) {
   .footer-address {
     display: -webkit-box;
@@ -319,6 +314,7 @@ body {
 .modal {
   position: relative;
   width: 450px;
+  min-height: 609px;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -786,7 +782,7 @@ body {
 }
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
+    min-width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -841,6 +837,9 @@ body {
 }
 
 /*Hero*/
+.hero.section {
+  padding: 94px 0;
+}
 @media screen and (min-width: 1200px) {
   .hero.section {
     padding-top: 200px;
@@ -901,6 +900,7 @@ body {
 .button-list {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-bottom: 40px;
 }
 @media screen and (min-width: 768px) {
   .button-list {
@@ -1011,6 +1011,7 @@ body {
 }
 
 .features-list__item {
+  margin-bottom: 30px;
   margin-right: auto;
   margin-left: auto;
   -webkit-box-align: center;
@@ -1025,6 +1026,12 @@ body {
     display: inline-block;
     width: calc((100% - 90px) / 2);
     margin: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .features-list__item:last-child {
+    margin-bottom: 60px;
   }
 }
 
@@ -1052,7 +1059,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1199px) {
   .about.section {
     display: none;
   }
@@ -1118,8 +1125,13 @@ body {
 }
 
 .team {
-  padding: 94px 0;
+  padding: 60px 0;
   background-color: #F5F4FA;
+}
+@media screen and (min-width: 1200px) {
+  .team {
+    padding: 94px 0;
+  }
 }
 
 .team-list {
@@ -1137,6 +1149,7 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    margin: 0;
   }
 }
 
@@ -1158,7 +1171,7 @@ body {
 @media screen and (min-width: 1200px) {
   .team-list__item {
     width: 270px;
-    margin-right: 30px;
+    margin-right: 15px;
     -webkit-box-align: end;
         -ms-flex-align: end;
             align-items: flex-end;
@@ -1198,7 +1211,7 @@ body {
 .section-subtitle {
   color: var(--title-text-color);
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
@@ -1206,6 +1219,7 @@ body {
 }
 @media screen and (min-width: 1200px) and (max-width: 1200px) {
   .section-subtitle {
+    font-size: 36px;
     margin-bottom: 50px;
   }
 }
@@ -1283,6 +1297,7 @@ social-links team list
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-bottom: 100px;
 }
 @media screen and (max-width: 767px) {
   .social-links {
@@ -1345,6 +1360,7 @@ social-links team list
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    margin: 0;
   }
 }
 
@@ -1352,7 +1368,6 @@ social-links team list
   display: inline-block;
   width: calc((100% - 60px) / 2);
   margin: 15px;
-  margin-right: 0;
 }
 @media screen and (min-width: 768px) {
   .client-list__item {
@@ -1364,6 +1379,18 @@ social-links team list
   .client-list__item {
     width: 170px;
     margin: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .client-list__item:nth-child(3n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .client-list__item:nth-child(2n) {
+    margin-right: 0;
   }
 }
 
@@ -1490,7 +1517,11 @@ social-links team list
 
 @media screen and (min-width: 768px) {
   .list.projects-list {
-    display: inline-block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     margin: -15px;
   }
 }
@@ -1561,11 +1592,16 @@ social-links team list
   }
 }
 
-.section {
-  padding: 94px 0;
+@media screen and (min-width: 1200px) {
+  .section {
+    padding: 94px 0;
+  }
 }
 
 .menu-container {
+  min-width: 480px;
+  height: 100%;
+  padding: 48px 40px;
   background-color: #FFFFFF;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1578,11 +1614,16 @@ social-links team list
 
 .mobile-menu {
   position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 48px 40px;
+  height: 100%;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -1602,15 +1643,15 @@ social-links team list
 }
 
 .mobile-list {
+  margin-bottom: auto;
+}
+
+.mobile-list__item {
   font-size: 40px;
   font-weight: 500;
   line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
-  margin-bottom: 120px;
-}
-
-.mobile-list__item {
   margin-bottom: 32px;
 }
 
@@ -1652,7 +1693,6 @@ social-links team list
 }
 
 .mobile-socials {
-  margin-bottom: 48px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1723,6 +1763,13 @@ social-links team list
 
 .modal-mobile-menu {
   position: relative;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: #FFFFFF;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 
 .menu__close-icon {
