--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -20,6 +20,7 @@
 }
 .button-list {
     flex-wrap:wrap ;
+    margin-bottom: 40px;
     @media screen and (min-width:768px) {
             display: flex;
                 justify-content: center;
