--- a/scss/components/_hero-section.scss
+++ b/scss/components/_hero-section.scss
@@ -32,6 +32,8 @@
 
 /*Hero*/
 .hero.section {
+    padding: 94px 0;
+    
 @media screen and (min-width: 1200px) {
         padding-top: 200px;
         padding-bottom: 200px;
