--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -1,5 +1,7 @@
 .menu-container {
-    
+    min-width: 480px;
+    height: 100%;
+    padding: 48px 40px;
     background-color:#FFFFFF;
     display: flex;
     flex-direction: column;
@@ -8,11 +10,11 @@
 
 .mobile-menu {
     position: fixed;
+    display: flex;
+    flex-direction: column;
         top: 0;
         left: 0;
-        width: 100vw;
-        height: 100vh;
-        padding: 48px 40px;
+        height: 100%;
         background-color: #FFFFFF;
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
         transform: translateX(100%);
@@ -31,17 +33,17 @@
 }
 
 .mobile-list {
-    font-size: 40px;
-    font-weight: 500;
-        line-height: 1.17;
-        letter-spacing: 0.02em;
-        color:var(--title-text-color);
-    margin-bottom: 120px;
+    margin-bottom: auto;
 }
 
 
 
 .mobile-list__item{
+    font-size: 40px;
+        font-weight: 500;
+        line-height: 1.17;
+        letter-spacing: 0.02em;
+        color: var(--title-text-color);
 margin-bottom: 32px;
 }
 
@@ -83,7 +85,6 @@ margin-bottom: 32px;
 }
 
 .mobile-socials {
-    margin-bottom: 48px;
     display: flex;
     gap: 10px;
 }
@@ -133,9 +134,18 @@ margin-bottom: 32px;
         border: none;
         cursor: pointer;
 }
+
 .modal-mobile-menu{
     position: relative;
+    z-index: 100;
+    width: 100%;
+     height: 100%;
+    
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
 }
+
 .menu__close-icon{
     fill: #000;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -146,4 +156,17 @@ margin-bottom: 32px;
 fill: #188ce8;
 }
     
+        // .modal {
+        //     position: relative;
+        //     max-width: 450px;
     
+        //     background-color: #FFFFFF;
+        //     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+        //     border-radius: 4px;
+        //     padding: 40px;
+    
+        //     @media screen and (min-width:1200px) {
+        //         width: 528px;
+        //         min-height: 581px;
+        //     }
+        // }
