--- a/scss/components/_section-clients.scss
+++ b/scss/components/_section-clients.scss
@@ -18,6 +18,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
         }
 }
 
@@ -26,7 +27,7 @@
     display: inline-block;
     width: calc((100% - 4 * 15px)/2);
     margin: 15px;
-    margin-right: 0;
+    // margin-right: 0;
     
 
     @media screen and (min-width: 768px) {
@@ -41,6 +42,17 @@
                 
      }
     }
+
+.client-list__item:nth-child(3n){
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        margin-right: 0;
+        }
+}
+.client-list__item:nth-child(2n) {
+    @media screen and (max-width: 767px)  {
+        margin-right: 0;
+    }
+}
 
 .client-list__link {
     display: flex;
