--- a/scss/components/_section-portfolio.scss
+++ b/scss/components/_section-portfolio.scss
@@ -73,8 +73,9 @@
 
 
 .list.projects-list {
-    @media screen and (min-width:768px) {
-        display: inline-block;
+    @media screen and (min-width:768px){
+        display: flex;
+        flex-wrap: wrap;
         margin: -15px;
         }
 
