--- a/scss/components/_team-section.scss
+++ b/scss/components/_team-section.scss
@@ -1,6 +1,11 @@
 .team {
-    padding: 94px 0;
+    padding: 60px 0;
+
     background-color: #F5F4FA;
+    @media screen and (min-width:1200px) {
+            padding: 94px 0;
+
+        }
 }
 
 .team-list {
@@ -12,6 +17,7 @@
 
     @media screen and (min-width:1200px) {
      display: flex;
+     margin: 0;
     
 }
 }
@@ -32,7 +38,7 @@
     
         @media screen and (min-width:1200px) {
         width: 270px;
-            margin-right: 30px;
+            margin-right: 15px;
             align-items: flex-end;
             justify-content: center;
     
@@ -70,13 +76,14 @@
 .section-subtitle {
     color: var(--title-text-color);
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
     margin-bottom: 30px;
 
      @media screen and (min-width:1200px) and (max-width:1200px) {
+              font-size: 36px;
             margin-bottom: 50px;
         }
 }
