--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -15,6 +15,7 @@
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+
 @media screen and (max-width:767px) {
         margin-right: 0;
         margin-bottom: 60px;
@@ -23,12 +24,17 @@
 }
 
 .footer-container {
-    flex-direction: column;
-    @media screen and (min-width:768px){
-       display: flex;
-        flex-direction: row;
+    display: block;
+    text-align: center;
+    
+
+@media screen and (min-width:768px) {
+
+        display: flex;
+
         flex-wrap: wrap;
-        margin-left: 30px;
+        justify-content: space-around;
+        
     }
     
 @media screen and (min-width:1200px)
@@ -40,6 +46,14 @@
 
 }
 
+
+
+
+
+
+
+
+
 .footer-address {
     @media screen and (max-width:767px) {
     display: flex;
@@ -48,12 +62,6 @@
     
     }
 
- @media screen and (min-width:768px) and (max-width:1199px)
-  {
-            margin-left: 90px;
-            margin-bottom: 20px;
-    
-        }
 
     @media screen and (min-width:1200px) {
         display: flex;
