--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -126,6 +126,10 @@
             margin-left: 40px;
     
         }
+    @media screen and (min-width:768px) and (max-width:1199px) {
+     display: block;
+        
+     }
 
 }
 
