Верстка виконана щодо трьох точок перелому: 480px, 768px і 1200px виконана розмітка мобільного меню

--- a/scss/components/_team-section.scss
+++ b/scss/components/_team-section.scss
@@ -82,7 +82,7 @@
     letter-spacing: 0.03em;
     margin-bottom: 30px;
 
-     @media screen and (min-width:1200px) and (max-width:1200px) {
+     @media screen and (min-width:1200px) {
               font-size: 36px;
             margin-bottom: 50px;
         }
