--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,11 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (max-width: 767px) {
+  .nav {
+    padding: 16px 0;
+  }
+}
 
 .menu-nav {
   display: -webkit-box;
@@ -245,17 +250,22 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 70px;
   font-style: normal;
   color: #FFFFFf;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
+  margin-bottom: 60px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 768px) {
   .address {
     margin-right: 0;
     margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .address {
+    margin-right: 70px;
   }
 }
 
@@ -388,6 +398,11 @@ body {
   color: #FFFFFF;
   padding: 0 0;
   margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .form-subscription__title {
+    text-align: start;
+  }
 }
 
 .form-subscription__btn {
@@ -782,7 +797,7 @@ body {
 }
 @media screen and (min-width: 480px) {
   .container {
-    min-width: 480px;
+    width: 480px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -991,7 +1006,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
 }
-@media screen and (min-width: 768px) and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .features-list.list {
     margin: -15px;
     margin-bottom: 60px;
@@ -1217,7 +1232,7 @@ body {
   letter-spacing: 0.03em;
   margin-bottom: 30px;
 }
-@media screen and (min-width: 1200px) and (max-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .section-subtitle {
     font-size: 36px;
     margin-bottom: 50px;
@@ -1477,7 +1492,6 @@ social-links team list
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   overflow: hidden;
-  opacity: 0;
 }
 
 .projects-element:hover .projects-overlay {
@@ -1506,6 +1520,7 @@ social-links team list
 @media screen and (min-width: 1200px) {
   .projects-list__item-flex-element {
     width: 370px;
+    margin: 15px;
   }
 }
 
@@ -1623,6 +1638,7 @@ social-links team list
           flex-direction: column;
   top: 0;
   left: 0;
+  width: 100%;
   height: 100%;
   background-color: #FFFFFF;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
