--- a/scss/components/_section-portfolio.scss
+++ b/scss/components/_section-portfolio.scss
@@ -34,7 +34,6 @@
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     overflow: hidden;
-    opacity: 0;
 }
 
 .projects-element:hover .projects-overlay {
@@ -59,6 +58,7 @@
         }
            @media screen and (min-width:1200px) {
                width: 370px;
+               margin: 15px;
     
            }
 }
