--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -9,18 +9,24 @@
 .address {
     display: block;
     align-items: center;
-    margin-right: 70px;
     font-style: normal;
     color: #FFFFFf;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
+    margin-bottom: 60px;
 
-@media screen and (max-width:767px) {
+@media screen and (min-width:768px) {
         margin-right: 0;
         margin-bottom: 60px;
 
     }
+        @media screen and (min-width:1200px) {
+            margin-right: 70px;
+
+    
+        }
+
 }
 
 .footer-container {
