--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -1,7 +1,11 @@
 .nav {
+
     display: flex;
     align-items: center;
+@media screen and (max-width:767px) {
+        padding: 16px 0;
 
+    }
 }
 
 .menu-nav {
