--- a/scss/layout/_forms.scss
+++ b/scss/layout/_forms.scss
@@ -202,6 +202,9 @@
     margin-left: 25px;
     margin-bottom: 30px;
 }
+.form-agreement-tx{
+    color: #2196F3;
+}
 
 .register-form__text {
     user-select: none;
