--- a/scss/components/_features-section.scss
+++ b/scss/components/_features-section.scss
@@ -27,12 +27,13 @@
     @media screen and (min-width:768px) and (max-width:1199px) {
            
         margin:-15px;
-        margin-bottom: 60px;
+        margin-bottom: 45px;
 
         }
 
     @media screen and (min-width:1200px){
         display: flex;
+        margin: -15px;
         
     }
 }
