--- a/scss/components/_social-links.scss
+++ b/scss/components/_social-links.scss
@@ -43,14 +43,20 @@ social-links team list
     display: flex;
 }
 .social-links {
-    @media screen and (max-width:767px) {
-            align-items: center;
-            margin-bottom: 60px;
-        }
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-        margin-bottom: 100px;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 60px;
+        align-items: center;
+    @media screen and (min-width:768px) and (max-width: 1199px) {
+            margin-bottom: 100px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            margin-bottom: 0;
+        }
+    
+    
 
 }
 .socials-list__link--accede {
