--- a/scss/components/_team-section.scss
+++ b/scss/components/_team-section.scss
@@ -17,7 +17,7 @@
 
     @media screen and (min-width:1200px) {
      display: flex;
-     margin: 0;
+     margin: -15px;
     
 }
 }
@@ -37,7 +37,7 @@
 
     
         @media screen and (min-width:1200px) {
-        width: 270px;
+             width: 270px;
             margin-right: 15px;
             align-items: flex-end;
             justify-content: center;
