--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -23,6 +23,7 @@
     }
         @media screen and (min-width:1200px) {
             margin-right: 70px;
+            margin-bottom: 0;
 
     
         }
