--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -35,12 +35,14 @@
 .button-list__btn {
     display: inline-block;
     margin-right: 8px;
+    margin-top: 15px;
     @media screen and (min-width:768px) {
             
         }
     
 }
 .button-list__btn:last-child {
+    margin-bottom: 15px;
     margin-right: 0;
 }
 .button--current {
