--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -18,8 +18,9 @@
     background-color: #188CE8;
   }
 }
+
 .button-list {
-    flex-wrap:wrap ;
+     flex-wrap:wrap ;
     margin-bottom: 40px;
 
     @media screen and (min-width:768px) {
@@ -36,14 +37,15 @@
     display: inline-block;
     margin-right: 8px;
     margin-top: 15px;
+
     @media screen and (min-width:768px) {
-            
+        margin-top: 0;
     }
     
 }
 .button-list__btn:last-child {
-    margin-bottom: 15px;
     margin-right: 0;
+
 }
 .button--current {
     background-color: var(--accent-color);
