--- a/scss/components/_features-section.scss
+++ b/scss/components/_features-section.scss
@@ -4,6 +4,7 @@
     
  @media screen and (min-width:1200px) {
          padding-top: 94px;
+        padding-bottom: 0;
      }
 
 }
@@ -24,16 +25,13 @@
 .features-list.list {
     justify-content: center;
 
-    @media screen and (min-width:768px) and (max-width:1199px) {
-           
+    @media screen and (min-width:768px) and (max-width:1199px) {  
         margin:-15px;
-        // margin-bottom: 45px;
-
+        
         }
 
     @media screen and (min-width:1200px){
         display: flex;
-        margin: -15px;
         
     }
 }
@@ -52,18 +50,21 @@
     justify-content: center;
     
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:768px) and (max-width: 1199px){
         display: inline-block;
         width: calc((100% - 6 * 15px)/2);
         margin: 15px;
     }
-    
+ @media screen and (min-width:1200px) {
+      width: 270px;
+        margin-right: 30px;
+        margin-bottom: 0;
+        align-items: flex-end;
+      justify-content: center;
+
+ }
 }
-// .features-list__item:last-child{
-// @media screen and (max-width:767px) {
-//     margin-bottom: 60px;
-//     }
-// }
+
 
 
 
