--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -1,11 +1,15 @@
 .menu-container {
+
     min-width: 480px;
     height: 100%;
     padding: 48px 40px;
     background-color:#FFFFFF;
     display: flex;
     flex-direction: column;
-    
+
+    @media screen and (max-width: 480px){
+     min-width:320px ;
+    }
 }
 
 .mobile-menu {
@@ -86,6 +90,7 @@ margin-bottom: 32px;
 }
 
 .mobile-socials {
+    flex-wrap: wrap;
     display: flex;
     gap: 10px;
 }
