--- a/scss/components/_section-clients.scss
+++ b/scss/components/_section-clients.scss
@@ -13,6 +13,11 @@
 
 .client-list {
     margin: -15px;
+    @media screen and (max-width: 480px) {
+        justify-content: center;
+            display: flex;
+            flex-wrap:wrap ;
+        }
 
         @media screen and (min-width: 1200px){
     display: flex;
@@ -24,9 +29,20 @@
 
 
 .client-list__item {
-    display: inline-block;
-    width: calc((100% - 4 * 15px)/2);
-    margin: 15px;
+    @media screen and (min-width: 320px) {
+              width: 210px;
+            display: inline-block;
+            margin: 15px;
+
+    
+        }
+          @media screen and (min-width: 480px) {
+            display: inline-block;
+                width: calc((100% - 4 * 15px)/2);
+                margin: 15px;
+    
+          }
+    
 
     
 
@@ -48,11 +64,11 @@
         margin-right: 0;
         }
 }
-.client-list__item:nth-child(2n) {
-    @media screen and (max-width: 767px)  {
-        margin-right: 0;
-    }
-}
+// .client-list__item:nth-child(2n) {
+//      @media screen and (min-width: 480px) and (max-width: 767px)  {
+//         margin-right: 0;
+//     }
+// }
 
 .client-list__link {
     display: flex;
