--- a/scss/components/_section-portfolio.scss
+++ b/scss/components/_section-portfolio.scss
@@ -46,8 +46,10 @@
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
-    width: 450px;
+    // width: 450px;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+
     
     @media screen and (min-width: 768px) and (max-width: 1199px)
      {
@@ -91,7 +93,7 @@
     padding-bottom: 20px;
     padding-right: 24px;
     padding-left: 24px;
-    width: 450px;
+    // width: 450px;
     border: 1px solid #EEEEEE;
 
 @media screen and (min-width:768px) {
