--- a/scss/layout/_forms.scss
+++ b/scss/layout/_forms.scss
@@ -1,6 +1,7 @@
 .modal {
     position: relative;
-    width: 450px;
+    max-width: 450px;
+    width: 100vw;
     min-height: 609px;
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -9,7 +10,7 @@
     
 
     @media screen and (min-width:1200px) {
-            width: 528px;
+            max-width: 528px;
             min-height: 581px;
     
         }
