--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -72,12 +72,16 @@
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: #757575;
+    @media screen and (min-width:768px) and (max-width:1199px) {
+        font-size: 12px;
+        }
 
 &:hover 
 &:focus {
     color: var(--accent-color);
 }
 }
+
 .site-nav__item:last-child{
     margin-bottom: 0;
 }
